--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <body>
     <a-scene>
         <a-assets>
-            <img id="field" src="https://res.cloudinary.com/dybluctxg/image/upload/v1495307503/field_kcw4so.jpg"/>
             <img id="photo" src="img/1560565_782499861825636_5942322296424206450_n.jpg"/>
             <img id="floato" src="img/profile-cutout.png"/>
             <img id="porto" src="img/layers.png"/>
@@ -53,7 +52,7 @@
         </a-entity>
 
 
-        <a-sky radius="10" src="#field"></a-sky>
+        <a-sky radius="10" color="#828976"></a-sky>
         <a-entity camera="camera" look-controls="look-controls" wasd-controls="wasd-controls" position="0 2 1.8">
             <a-cursor color="#FFF849" fuse="true"></a-cursor>
         </a-entity>
